--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "quality_gate_openers",
+  "name": "website",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^0.8.7",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
+    "dotenv": "^2.0.0",
     "debug": "~2.2.0",
     "express": "~4.13.1",
-    "jade": "~1.11.0",
+    "jsonwebtoken": "^7.1.9",
+    "knex": "^0.11.1",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   }
